improved the 'getting started' experience